--- a/contact.html
+++ b/contact.html
@@ -35,15 +35,19 @@
       <h1>GET IN TOUCH</h1>
       <div>
         <label for="input-name">Name</label>
-        <input id="input-name" type="text" />
+        <input id="input-name" type="text" placeholder="Masukkan Nama Anda" />
       </div>
       <div>
         <label for="input-email">Email</label>
-        <input id="input-email" type="email" />
+        <input
+          id="input-email"
+          type="email"
+          placeholder="Masukkan Alamat Email Anda"
+        />
       </div>
       <div>
         <label for="input-no">Phone</label>
-        <input id="input-no" type="number" />
+        <input id="input-no" type="number" placeholder="Masukkan No.Hp Anda" />
       </div>
       <div>
         <label for="subjek">Subject</label>
@@ -56,7 +60,12 @@
       </div>
       <div>
         <label for="message">Your message</label>
-        <textarea id="message" rows="5" cols="10"></textarea>
+        <textarea
+          id="message"
+          rows="5"
+          cols="10"
+          placeholder="Masukkan Pesan Anda"
+        ></textarea>
       </div>
       <div>
         <button type="button" onclick="submitData()">Submit</button>
