--- a/contact.html
+++ b/contact.html
@@ -9,28 +9,28 @@
     <link rel="stylesheet" href="navbar.css" />
   </head>
   <body>
-    <nav>
-      <div class="nav-left">
-        <a href="https://dumbways.id/" target="_blank">
-          <img src="image/brandred.png" alt="dumbways" width="40px" />
-        </a>
-      </div>
-      <div class="nav-center">
-        <ul>
-          <li>
-            <a href="index.html">Home</a>
-          </li>
-          <li>
-            <a href="https://himati-web.vercel.app/" target="_blank"
-              >My Project</a
-            >
-          </li>
-        </ul>
-      </div>
-      <div class="nav-right">
-        <a href="contact.html">Contact Me</a>
-      </div>
-    </nav>
+    <div class="bar">
+      <nav>
+        <div class="nav-left">
+          <a href="https://dumbways.id/" target="_blank">
+            <img src="image/brandred.png" alt="dumbways" width="40px" />
+          </a>
+          <ul>
+            <li>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <a href="https://himati-web.vercel.app/" target="_blank"
+                >My Project</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="nav-right">
+          <a href="contact.html">Contact Me</a>
+        </div>
+      </nav>
+    </div>
     <form>
       <h1>GET IN TOUCH</h1>
       <div>
